# WebSearch

http_server/: CMakeLists.txt  data.ini  http_connection.cpp  http_connection.h  main.cpp
spider/: CMakeLists.txt  MyException.cpp  MyException.h  data.ini  http_utils.cpp  http_utils.h  iniParser.cpp  iniParser.h  link.h  main.cpp  table.cpp  table.h  vcpkg.json
